--- a/google-amp/disqus-amp.html
+++ b/google-amp/disqus-amp.html
@@ -20,15 +20,8 @@
     }
   }
   function getQueryVariable(variable) {
-    var query = window.location.search.substring(1);
-    var vars = query.split('&');
-    for (var i = 0; i < vars.length; i++) {
-      var pair = vars[i].split('=');
-      if (pair[0] == variable) {
-        return pair[1];
-      }
-    }
-    return (false);
+    var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
+    return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
   }
   function generateCss(q) {
     var css       = document.createElement('style'),
