--- a/google-amp/disqus-amp.html
+++ b/google-amp/disqus-amp.html
@@ -19,7 +19,7 @@
       }
     }
   }
-  function getQueryVariable(variable) {
+  function getQueryVariable(name) {
     var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
     return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
   }
