--- a/google-amp/disqus-amp.html
+++ b/google-amp/disqus-amp.html
@@ -41,6 +41,7 @@
             type: 'embed-size',
             height: document.body.scrollHeight
         }, '*');
+      console.log(document.body.scrollHeight);
     });
   };
   (function() {
