--- a/google-amp/disqus-amp.html
+++ b/google-amp/disqus-amp.html
@@ -44,12 +44,12 @@
         };
 
         function postHeight() {
-            post_message.height = document.getElementById('disqus_thread').outerHeight;
+            post_message.height = document.getElementById('disqus_thread').scrollHeight;
             window.parent.postMessage(post_message, '*');
         }
         postHeight();
         
-        window.addEventListener("resize", postHeight);
+        window.addEventListener("resize", postHeight());
 
         function getQueryVariable(name) {
             var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
