--- a/google-amp/disqus-amp.html
+++ b/google-amp/disqus-amp.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 
-<body>
+<body onresize="postHeight()">
 
     <div id="disqus_thread"></div>
 
@@ -56,7 +56,6 @@
 
 
         window.addEventListener('message', postHeight);
-        window.addEventListener('resize', postHeight);
 
         function getQueryVariable(name) {
             var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
